[package]
name = "uniconv"
version = "1.1.1"
authors = ["mustafif0929@gmail.com <mustafif0929@gmail.com>"]
edition = "2018"
description = "A CommandLine Unit Converter"
license = "MIT" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
mkproj-lib = "0.2.8"
